--- a/index.html
+++ b/index.html
@@ -8,7 +8,92 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>Sign-up Form</h1>
+    <div class="container">
+      <div class="imagePanel">
+        <img
+          class="gambarnya"
+          src="./img/halie-west-25xggax4bSA-unsplash.jpg"
+          alt="image of a forest"
+        />
+      </div>
+      <div class="formPanel">
+        <div class="welcomeText">
+          <h3>
+            This is not a real online service! You know you need something like
+            this in your life to help you realize your deepest dreams. Sign up
+            now to get started
+          </h3>
+          <br />
+          <h3>You know you want to.</h3>
+        </div>
+        <div class="form-container">
+          <h3>Let's do this!</h3>
+          <br />
+          <form action="#" method="post">
+            <table>
+              <tr>
+                <th><label for="first_name">First Name:</label></th>
+                <th><label for="last_name">Last Name:</label></th>
+              </tr>
+              <tr>
+                <td>
+                  <input
+                    type="text"
+                    id="first_name"
+                    name="first_name"
+                    required
+                  />
+                </td>
+                <td>
+                  <input type="text" id="last_name" name="last_name" />
+                </td>
+              </tr>
+              <tr>
+                <th><label for="email">Email:</label></th>
+                <th><label for="phone">Phone Number:</label></th>
+              </tr>
+              <tr>
+                <td>
+                  <input type="text" id="email" name="email" required />
+                </td>
+                <td>
+                  <input type="text" id="phone" name="phone" />
+                </td>
+              </tr>
+              <tr>
+                <th><label for="password">Password:</label></th>
+                <th><label for="passwordConfirm">Confirm Password:</label></th>
+              </tr>
+              <tr>
+                <td>
+                  <input
+                    type="password"
+                    id="password"
+                    name="password"
+                    required
+                  />
+                </td>
+                <td>
+                  <input
+                    type="password"
+                    id="passwordConfirm"
+                    name="passwordConfirm"
+                  />
+                </td>
+              </tr>
+              <tr>
+                <td id="buttonCell">
+                  <button class="createButton" type="submit">
+                    Create Account
+                  </button>
+                </td>
+              </tr>
+            </table>
+          </form>
+        </div>
+        <h4>Already have an account? <a href="#">Log in</a></h4>
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
