added italic styling to the "know" word

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             now to get started
           </h3>
           <br />
-          <h3>You know you want to.</h3>
+          <h3>You <i>know</i> you want to.</h3>
         </div>
         <div class="form-container">
           <h3>Let's do this!</h3>
@@ -82,16 +82,15 @@
                 </td>
               </tr>
               <tr>
-                <td id="buttonCell">
-                  <button class="createButton" type="submit">
-                    Create Account
-                  </button>
-                </td>
+                <td id="buttonCell"></td>
               </tr>
             </table>
           </form>
         </div>
-        <h4>Already have an account? <a href="#">Log in</a></h4>
+        <button class="createButton" type="submit">Create Account</button>
+        <h4 class="loginPage">
+          Already have an account? <a href="#">Log in</a>
+        </h4>
       </div>
     </div>
     <script src="./script.js"></script>
