--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   <body>
     <div class="container">
       <div class="imagePanel">
+        <div class="logoContainer"><img class="logo" src="./img/odin-lined.png" alt=""></div>
         <img
           class="gambarnya"
           src="./img/halie-west-25xggax4bSA-unsplash.jpg"
           alt="image of a forest"
         />
+        <p id="credit">Photo by Halie West from <a
+          style="color: white;" href="https://unsplash.com/@haliewestphoto">Unsplash</a></p>
       </div>
       <div class="formPanel">
         <div class="welcomeText">
@@ -85,11 +88,11 @@
                 <td id="buttonCell"></td>
               </tr>
             </table>
+          </div>
+            <button class="createButton" type="submit">Create Account</button>
           </form>
-        </div>
-        <button class="createButton" type="submit">Create Account</button>
         <h4 class="loginPage">
-          Already have an account? <a href="#">Log in</a>
+          Already have an account? <a style="color: green" href="#">Log in</a>
         </h4>
       </div>
     </div>
